# rsys-cli

./: .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
example_output/: dump  dump_normal
src/: cli.rs  dump.rs  get.rs  main.rs  opt.rs  util.rs
src/cmd/: common.rs  dump.rs  get.rs  mod.rs  watch.rs
src/cmd/graph/: common.rs  cpu.rs  events.rs  interface.rs  mod.rs  storage.rs
src/cmd/graph/common/: data.rs  display.rs  mod.rs  monitor.rs  rxtx.rs
src/cmd/show/: cpu.rs  events.rs  interface.rs  mod.rs  net.rs  ps.rs  storage.rs
src/cmd/show/common/: data.rs  display.rs  mod.rs  monitor.rs  rxtx.rs  screen.rs  widget.rs
src/cmd/show/cpu/: frequency.rs  mod.rs  monitor.rs  usage.rs
