[package]
name = "rsys-cli"
version = "0.1.0"
authors = ["wojciechkepka <wojtek.kepka@protonmail.com>"]
edition = "2018"

[dependencies]
rsys = { version = "0.5.1", features = ["serialize", "display"] }
structopt = { version = "0.3", default-features = false }
serde_json = "1"
serde = { version = "1", features = ["derive"] }


[[bin]]
name = "rsys"
path = "./src/main.rs"
