[package]
name = "rsys-cli"
version = "0.1.0"
authors = ["wojciechkepka <wojtek.kepka@protonmail.com>"]
edition = "2018"

[dependencies]
rsys = { git = "https://github.com/wojciechkepka/rsys", branch = "master", features = ["serialize", "display"] }
#rsys = { path = "../rsys", features = ["serialize", "display"] }
structopt = { version = "0.3", default-features = false }
serde_json = "1"
serde_yaml = "0.8"
serde = { version = "1", features = ["derive"] }
prettytable-rs = "^0.8"
termion = "1"
tui = "0.12"
anyhow = "1"
rand = "0.7.3"


[[bin]]
name = "rsys"
path = "./src/main.rs"
